--- a/src/pages/views/RadarView.scss
+++ b/src/pages/views/RadarView.scss
@@ -113,7 +113,7 @@
     margin-top: 20px !important;
   }
   .tabsComponents {
-    margin: 20px auto;
+    margin: 20px auto !important;
     display: flex;
     justify-content: center;
     width: 90%;
@@ -134,7 +134,7 @@
     width: 80%;
   }
   .tabsComponents {
-    margin-left: 50px !important;
+    margin: 80px 0 0 80px !important;
     min-width: 400px !important;
   }
 
@@ -152,15 +152,14 @@
     width: 100%;
   }
   .tabsComponents {
-    margin-left: 100px !important;
-    min-width: 400px;
+    margin: 80px 0 0 80px !important;
+    min-width: 500px !important;
   }
 }
 
 @media only screen and (max-width: 767px) {
   h2.chakra-heading {
     font-size: 23px !important;
-    margin-top: 160px !important;
   }
 }
 
@@ -175,8 +174,7 @@
     width: 90%;
   }
   .tabsComponents {
-    margin-left: 80px !important;
-    margin-top: 80px;
+    margin: 80px 0 0 80px !important;
     max-width: 290px !important;
   }
 }
